fixing images, align html lists

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -34,6 +34,16 @@ pre {
 	margin: .5rem 0;
 }
 
+.post ul, ol {
+	margin: .5rem 0;
+}
+
+.post ol, ul, li {
+	margin:.5rem 0;
+	padding-left: 1rem;
+	text-decoration: underline;
+}
+
 .post h1, .post h2, .post h3, .post h4 {
 	margin: 1rem 0;
 }
